--- a/app/views/pages/one.html.erb
+++ b/app/views/pages/one.html.erb
@@ -1,1 +1,6 @@
-<h1>Hola, Mi nombre es Francisco Arellano</h1>
+<h1>Pages#one</h1>
+
+
+<h1 class="m-5">Hola, Mi nombre es Francisco Arellano</h1>
+
+<h2 class="m-5"><%=link_to "Pagina Dos", pages_two_path %></h2>
