--- a/app/views/pages/two.html.erb
+++ b/app/views/pages/two.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#two</h1>
+<h2 class="m-5"><%=link_to "Pagina Uno", pages_one_path %></h2>
+
+<%=image_tag "/screenshot.png"%>
 <p>Find me in app/views/pages/two.html.erb</p>
