--- a/app/views/pages/one.html.erb
+++ b/app/views/pages/one.html.erb
@@ -3,4 +3,5 @@
 
 <h1 class="m-5">Hola, Mi nombre es Francisco Arellano</h1>
 
-<h2 class="m-5"><%=link_to "Pagina Dos", pages_two_path %></h2>
+<p class="m-5"><%=link_to "Pagina Dos", pages_two_path %></p>
+<p class="m-5"><%=link_to "Pagina Tres", pages_three_path %></p>
