--- a/app/views/pages/two.html.erb
+++ b/app/views/pages/two.html.erb
@@ -1,5 +1,5 @@
 <h1>Pages#two</h1>
-<h2 class="m-5"><%=link_to "Pagina Uno", pages_one_path %></h2>
+<p class="m-5"><%=link_to "Pagina Uno", pages_one_path %></p>
+<p class="m-5"><%=link_to "Pagina Tres", pages_three_path %></p>
 
 <%=image_tag "/screenshot.png"%>
-<p>Find me in app/views/pages/two.html.erb</p>
